--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: furi
 version: 0.0.1
-author: Nanonid
+author: Nanonid eric.lindahl.tab@gmail.com
 description: |-
   #FUri -- the functional URI.
 
